--- a/www/baby-garden.html
+++ b/www/baby-garden.html
@@ -147,14 +147,14 @@
         </nav>
       </header>
       <!--begin screen-->
-      <section class="screen section">
+      <section class="screen screen_garden section">
         <div class="screen__block">
           <div class="screen__container container">
             <div class="screen__inner">
               <div class="screen__text">
                 <h2 class="screen__title title">бэби-сад</h2>
                 <h2 class="screen__title title">в воскресенске на ленина</h2>
-                <p>развиваем детей от 8 месяцев до 7 лет</p>
+                <p>развиваем детей от 2 до 7 лет</p>
               </div>
               <div class="screen__actions">
                 <a class="screen__actions-btn btn btn_yellow" href="#!">Бэби-клуб</a>
@@ -265,7 +265,7 @@
                     <p>Работает в Бэби-клубе с 2010 года</p>
                   </div>
                   <div class="expert__quote">
-                    <p>Каждый ребёнок - личность и задача педагога - развить лучшие качества каждого ребенка</p>
+                    <p>Каждый ребёнок &#8212 личность и задача педагога &#8212 развить лучшие качества каждого ребенка</p>
                     <svg class="icon icon-quote">
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-quote"></use>
                     </svg>
@@ -293,7 +293,7 @@
                     <p>Работает в Бэби-клубе с 2010 года</p>
                   </div>
                   <div class="expert__quote">
-                    <p>Каждый ребёнок - личность и задача педагога - развить лучшие качества каждого ребенка</p>
+                    <p>Каждый ребёнок &#8212 личность и задача педагога &#8212 развить лучшие качества каждого ребенка</p>
                     <svg class="icon icon-quote">
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-quote"></use>
                     </svg>
@@ -394,7 +394,7 @@
               <div class="learn__item-title">Не просто считать, но и ...</div>
               <ul class="learn__item-list">
                 <li>Расплачиваться в магазине</li>
-                <li>Измерять свой вес и рос</li>
+                <li>Измерять свой вес и рост</li>
                 <li>Определять размер одежды</li>
                 <li>Определять время по часам</li>
                 <li>Планировать свое время</li>
@@ -897,7 +897,7 @@
       <!--begin library-->
       <section class="library section" data-anim-slow="">
         <div class="library__container container">
-          <h2 class="library__title title">Бэби-библиотека</h2>
+          <h2 class="library__title title">Бэбибиблиотека</h2>
           <div class="library__slider js-library-slider">
             <div class="library__item">
               <div class="library__content">
@@ -954,8 +954,8 @@
       <!--begin why-us-->
       <section class="why-us section" data-anchor="why-us">
         <div class="why-us__container container">
-          <h2 class="why-us__title title title_black">почему каждый месяц</h2>
-          <h2 class="why-us__title title title_black">25 000 детей приходят в бэби-сад</h2>
+          <h2 class="why-us__title title title_black">почему каждый день</h2>
+          <h2 class="why-us__title title title_black">дети и родители выбирают Бэби-сад</h2>
           <div class="why-us__inner">
             <div class="why-us__item" data-anim-fast="">
               <div class="why-us__item-icon-wrap">
@@ -970,7 +970,7 @@
                 <div class="why-us__item-icon icon-letter-2"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>В большинстве наших клубов уже установлено видеонаблюдение, что бы родители могли быть спокойны за своего ребенка и... первым радоваться его успехам!</p>
+                <p>В большинстве наших садов уже установлено видеонаблюдение, что бы родители могли быть спокойны за своего ребенка и... первым радоваться его успехам!</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -978,7 +978,7 @@
                 <div class="why-us__item-icon icon-letter-3"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Даже самым непоседливым ребятам в Бэби-клубе комфортно — дети могут чувствовать себя свободно во время затяний и они не устают, чередуя короткие задание с увлекательными переменками.</p>
+                <p>Даже самым непоседливым ребятам в Бэби-клубе комфортно — дети могут чувствовать себя свободно во время занятий и они не устают, потому что им всегда интересно.</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -986,7 +986,7 @@
                 <div class="why-us__item-icon icon-letter-4"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Зрение и осанда детей поддерживатся в первозданном виде благодаря использованию только здоровьесберегающих методик. Подвижные игры, музыкальные и танцевальные минутки помогают сохранять «в здоровом теле здоровый дух».</p>
+                <p>Зрение и осанка детей поддерживается в первозданном виде благодаря использованию только здоровьесберегающих методик. Подвижные игры, музыкальные и танцевальные минутки помогают сохранять «в здоровом теле здоровый дух».</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -994,7 +994,7 @@
                 <div class="why-us__item-icon icon-letter-5"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Мы помогаем родителям психологически грамотно общаться со своим ребёнком, чтобы малыш вырос гармоничным человекм, способным найти своё истинное призвание.</p>
+                <p>Мы помогаем родителям психологически грамотно общаться со своим ребёнком, чтобы малыш вырос гармоничным человеком, способным найти своё истинное призвание.</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -1002,7 +1002,7 @@
                 <div class="why-us__item-icon icon-letter-6"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Что бы пребывание ребенка в клубе было комфортным и безопасным, в проведении затяния принимают участие специалист по работе с детьми и помошник.</p>
+                <p>Чтобы пребывание ребенка в саду было комфортным и безопасным, в проведении занятия принимают участие 2 старших специалиста и 1 младший.</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -1010,7 +1010,7 @@
                 <div class="why-us__item-icon icon-letter-7"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Мы проводим тренинги для взрослых: учим родителей понимать воих детей и принимать особенности их характеров.</p>
+                <p>Мы проводим тренинги для взрослых: учим родителей понимать своих детей и принимать особенности их характеров.</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -1024,7 +1024,7 @@
           </div>
         </div>
       </section>
-      <begin>thanks</begin>
+      <!--begin thanks-->
       <section class="thanks section" data-anchor="thanks">
         <div class="thanks__container container">
           <h2 class="thanks__title title">
@@ -1085,7 +1085,7 @@
         <!--begin video-blog-->
         <section class="video-blog">
           <div class="video-blog__container container">
-            <h2 class="video-blog__title title" data-anim-title="">ВИДЕО-блог</h2>
+            <h2 class="video-blog__title title" data-anim-title="">ВИДЕОблог</h2>
             <div class="video-blog__inner">
               <div class="video-blog__video" data-anim-slow="">
                 <div class="video-blog__video-text js-video-text">
