--- a/www/home.html
+++ b/www/home.html
@@ -317,7 +317,7 @@
               <div class="learn__item-title">Не просто считать, но и ...</div>
               <ul class="learn__item-list">
                 <li>Расплачиваться в магазине</li>
-                <li>Измерять свой вес и рос</li>
+                <li>Измерять свой вес и рост</li>
                 <li>Определять размер одежды</li>
                 <li>Определять время по часам</li>
                 <li>Планировать свое время</li>
@@ -411,7 +411,7 @@
       <!--begin library-->
       <section class="library section" data-anim-slow="">
         <div class="library__container container">
-          <h2 class="library__title title">Бэби-библиотека</h2>
+          <h2 class="library__title title">Бэбибиблиотека</h2>
           <div class="library__slider js-library-slider">
             <div class="library__item">
               <div class="library__content">
