--- a/www/landing.html
+++ b/www/landing.html
@@ -260,7 +260,7 @@
                     <p>Работает в Бэби-клубе с 2010 года</p>
                   </div>
                   <div class="expert__quote">
-                    <p>Каждый ребёнок - личность и задача педагога - развить лучшие качества каждого ребенка</p>
+                    <p>Каждый ребёнок &#8212 личность и задача педагога &#8212 развить лучшие качества каждого ребенка</p>
                     <svg class="icon icon-quote">
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-quote"></use>
                     </svg>
@@ -287,7 +287,7 @@
                     <p>Работает в Бэби-клубе с 2010 года</p>
                   </div>
                   <div class="expert__quote">
-                    <p>Каждый ребёнок - личность и задача педагога - развить лучшие качества каждого ребенка</p>
+                    <p>Каждый ребёнок &#8212 личность и задача педагога &#8212 развить лучшие качества каждого ребенка</p>
                     <svg class="icon icon-quote">
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-quote"></use>
                     </svg>
@@ -342,7 +342,7 @@
               <div class="learn__item-title">Не просто считать, но и ...</div>
               <ul class="learn__item-list">
                 <li>Расплачиваться в магазине</li>
-                <li>Измерять свой вес и рос</li>
+                <li>Измерять свой вес и рост</li>
                 <li>Определять размер одежды</li>
                 <li>Определять время по часам</li>
                 <li>Планировать свое время</li>
@@ -1043,7 +1043,7 @@
       <!--begin library-->
       <section class="library section" data-anim-slow="">
         <div class="library__container container">
-          <h2 class="library__title title">Бэби-библиотека</h2>
+          <h2 class="library__title title">Бэбибиблиотека</h2>
           <div class="library__slider js-library-slider">
             <div class="library__item">
               <div class="library__content">
@@ -1116,7 +1116,7 @@
                 <div class="why-us__item-icon icon-letter-2"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>В большинстве наших клубов уже установлено видеонаблюдение, что бы родители могли быть спокойны за своего ребенка и... первым радоваться его успехам!</p>
+                <p>В большинстве наших садов уже установлено видеонаблюдение, что бы родители могли быть спокойны за своего ребенка и... первым радоваться его успехам!</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -1124,7 +1124,7 @@
                 <div class="why-us__item-icon icon-letter-3"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Даже самым непоседливым ребятам в Бэби-клубе комфортно — дети могут чувствовать себя свободно во время затяний и они не устают, чередуя короткие задание с увлекательными переменками.</p>
+                <p>Даже самым непоседливым ребятам в Бэби-клубе комфортно — дети могут чувствовать себя свободно во время занятий и они не устают, потому что им всегда интересно.</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -1132,7 +1132,7 @@
                 <div class="why-us__item-icon icon-letter-4"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Зрение и осанда детей поддерживатся в первозданном виде благодаря использованию только здоровьесберегающих методик. Подвижные игры, музыкальные и танцевальные минутки помогают сохранять «в здоровом теле здоровый дух».</p>
+                <p>Зрение и осанка детей поддерживается в первозданном виде благодаря использованию только здоровьесберегающих методик. Подвижные игры, музыкальные и танцевальные минутки помогают сохранять «в здоровом теле здоровый дух».</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -1140,7 +1140,7 @@
                 <div class="why-us__item-icon icon-letter-5"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Мы помогаем родителям психологически грамотно общаться со своим ребёнком, чтобы малыш вырос гармоничным человекм, способным найти своё истинное призвание.</p>
+                <p>Мы помогаем родителям психологически грамотно общаться со своим ребёнком, чтобы малыш вырос гармоничным человеком, способным найти своё истинное призвание.</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -1148,7 +1148,7 @@
                 <div class="why-us__item-icon icon-letter-6"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Что бы пребывание ребенка в клубе было комфортным и безопасным, в проведении затяния принимают участие специалист по работе с детьми и помошник.</p>
+                <p>Чтобы пребывание ребенка в саду было комфортным и безопасным, в проведении занятия принимают участие 2 старших специалиста и 1 младший.</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
@@ -1156,7 +1156,7 @@
                 <div class="why-us__item-icon icon-letter-7"></div>
               </div>
               <div class="why-us__item-descr">
-                <p>Мы проводим тренинги для взрослых: учим родителей понимать воих детей и принимать особенности их характеров.</p>
+                <p>Мы проводим тренинги для взрослых: учим родителей понимать своих детей и принимать особенности их характеров.</p>
               </div>
             </div>
             <div class="why-us__item" data-anim-fast="">
