--- a/www/baby-garden.html
+++ b/www/baby-garden.html
@@ -349,7 +349,9 @@
                     </svg>
                   </div>
                   <div class="values-block__item-title">Бережность</div>
-                  <p>Даже самые непоседливые дети чувствуют себя свободно и не устают, потому что увлекательные задания чередуются с играми. Дети познают мир в комфортном для себя ритме, который зависит от особенностей характера каждого.</p>
+                  <p>Даже самые непоседливые дети чувствуют себя свободно и не устают, потому что увлекательные задания чередуются
+                    <br/>с играми. Дети познают мир в комфортном для себя ритме, который зависит
+                    <br/>от особенностей характера каждого.</p>
                 </div>
                 <div class="values-block__item" data-anim-slow="">
                   <div class="values-block__item-img">
@@ -362,7 +364,8 @@
                     </svg>
                   </div>
                   <div class="values-block__item-title">Здоровье</div>
-                  <p>Зрение и осанка детей поддерживаются в первозданном виде благодаря использованию только здоровьесберегающих методик. Подвижные игры, музыкальные и танцевальные минутки помогают детям сохранять «в здоровом теле здоровый дух».</p>
+                  <p>Зрение и осанка детей поддерживаются
+                    <br/>в первозданном виде благодаря использованию только здоровьесберегающих методик. Подвижные игры, музыкальные и танцевальные минутки помогают детям сохранять «в здоровом теле здоровый дух».</p>
                 </div>
                 <div class="values-block__item" data-anim-slow="">
                   <div class="values-block__item-img">
@@ -418,10 +421,10 @@
               </div>
               <div class="learn__item-title">Не просто читать, но и ...</div>
               <ul class="learn__item-list">
+                <li>Самостоятельно читать любимые сказки, когда мама устала</li>
                 <li>Ориентироваться среди вывесок и указателей в городе</li>
                 <li>Находить любую информацию в книгах и интернете</li>
                 <li>Читать письма и СМС</li>
-                <li>Самостоятельно читать любимые сказки, когда мама устала</li>
               </ul>
             </div>
             <div class="learn__item" data-anim-fast="">
@@ -670,7 +673,7 @@
       <!--begin news-->
       <section class="news section">
         <div class="news__container container">
-          <h2 class="news__title title" data-anim-title="">новости сети</h2>
+          <h2 class="news__title title" data-anim-title="">новости сада</h2>
           <div class="news__inner">
             <div class="news__item" data-anim-slow="">
               <div class="news__item-video">
@@ -1144,7 +1147,7 @@
                 <a class="contact__city-change underlined" href="#!" data-popup-target="change-city">Другой город</a>
               </div>
               <div class="contact__metro">
-                <p class="contact__metro-text">Удобная для Вас ветка Метро:</p>
+                <p class="contact__metro-text">Удобная для Вас ветка метро:</p>
                 <ul class="contact__metro-list js-branch-list">
                   <li class="contact__metro-branch contact__metro-branch_1">
                     <span>1</span>
