--- a/www/landing.html
+++ b/www/landing.html
@@ -366,10 +366,10 @@
               </div>
               <div class="learn__item-title">Не просто читать, но и ...</div>
               <ul class="learn__item-list">
+                <li>Самостоятельно читать любимые сказки, когда мама устала</li>
                 <li>Ориентироваться среди вывесок и указателей в городе</li>
                 <li>Находить любую информацию в книгах и интернете</li>
                 <li>Читать письма и СМС</li>
-                <li>Самостоятельно читать любимые сказки, когда мама устала</li>
               </ul>
             </div>
             <div class="learn__item" data-anim-fast="">
@@ -1290,7 +1290,7 @@
                 <a class="contact__city-change underlined" href="#!" data-popup-target="change-city">Другой город</a>
               </div>
               <div class="contact__metro">
-                <p class="contact__metro-text">Удобная для Вас ветка Метро:</p>
+                <p class="contact__metro-text">Удобная для Вас ветка метро:</p>
                 <ul class="contact__metro-list js-branch-list">
                   <li class="contact__metro-branch contact__metro-branch_1">
                     <span>1</span>
